--- a/templates/mytardis_hpc_app/submission.html
+++ b/templates/mytardis_hpc_app/submission.html
@@ -1,1 +1,11 @@
-<h3> Computation in progress</h3>
+
+
+
+<h4> Computation submitted to HPC facility</h4>
+<h3>
+    Experiment ID {{ experiment_id }}
+</h3>
+<p>
+    Group ID will be sent to {{ email }}
+</p>
+
