--- a/templates/mytardis_hpc_app/response.html
+++ b/templates/mytardis_hpc_app/response.html
@@ -1,7 +1,6 @@
 {% load url from future %}
 
-<body>
 
-<form action="{% url 'tardis.apps.mytardis_hpc_app.views.response'  %}" method="post">{% csrf_token %}
+<form action="{% url 'tardis.apps.mytardis_hpc_app.views.response'  %}" method="post">
     {{ form.as_p}}
 </form>
