--- a/templates/mytardis_hpc_app/index.html
+++ b/templates/mytardis_hpc_app/index.html
@@ -20,7 +20,6 @@
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
 <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-<script type="text/javascript" src="http://jzaefferer.github.com/jquery-validation/jquery.validate.js"></script>
 
 <style>
     .modal {
@@ -176,7 +175,8 @@
                 || parseInt(number_of_cores) < 1)
             error_message+= "Enter number of cores (1 or more)\n"
 
-        if(group_id.length == 0)
+        if((group_id.split(" ").length-1) == group_id.length
+            || group_id.length == 0)
             error_message+= "Enter Group ID\n";
 
         if(error_message.length != 0){
