--- a/templates/mytardis_hpc_app/index.html
+++ b/templates/mytardis_hpc_app/index.html
@@ -1,9 +1,18 @@
 {% load url from future %}
+{% load render_table from django_tables2 %}
+
+<link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
+<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+
+
 
 <form id="hpcForm" action="{% url 'tardis.apps.mytardis_hpc_app.views.index' experiment_id %}"  method="post">{% csrf_token %}
     {{ form.as_p}}
     <input  type="submit" value="Submit" id="id_submit" />
 </form>
+{% render_table computation_status %}
 
 <!-- successful form submission notification dialog -->
 <div class="modal" id="success_notification">
@@ -16,10 +25,6 @@
     </p>
 </div>
 
-
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
-<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
 <style>
     .modal {
